# hunter

cmake/configs/: default.cmake
cmake/projects/TinyDNN/: hunter.cmake
cmake/projects/TinyXML/: hunter.cmake
cmake/projects/dxsdk/: hunter.cmake
cmake/projects/pugixml/: hunter.cmake
cmake/projects/upng/: hunter.cmake
examples/TinyDNN/: CMakeLists.txt  foo.cpp
examples/TinyXML/: CMakeLists.txt
